Remove a bunch of yellow flgs.
Remove many throws clauses for methods which rarely if ever throw exceptions - throw RuntimeException. Simplifies code.